replace Runtime.exec w use of ProcessBuilder